@@ -16,6 +16,7 @@
    number = 7,
    pages = "73+",
    month = jul,
+   issn = "1334-2345",
    keywords = "keyword1,keyword2,keyword3",
    note = "This is a full ARTICLE entry",
    url = "\url{http://example.com/~user/}"
